--- a/src/style.css
+++ b/src/style.css
@@ -1,83 +1,81 @@
 body {
-    font-family: 'Gochi Hand', cursive;
+  font-family: "Gochi Hand", cursive;
 }
 
 .main-title {
-    font-size: 4rem;
+  font-size: 4rem;
 }
 
 .main-container {
-    display: flex;
-    gap: 2rem;
+  display: flex;
+  gap: 2rem;
 }
 
 .recent {
-    width: 45vw;
+  width: 45vw;
 }
 
 .list-refresh {
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-
+  display: flex;
+  align-items: center;
+  gap: 2rem;
 }
 
 .title {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .btn {
-    height: 1.7rem;
-    padding: 0.2rem 0.5rem;
-    font-weight: 700;
-    background-color: transparent;
-    border-radius: 0.2rem;
-    box-shadow: 4px 3px;
-    width: 6vw;
+  height: 1.7rem;
+  padding: 0.2rem 0.5rem;
+  font-weight: 700;
+  background-color: transparent;
+  border-radius: 0.2rem;
+  box-shadow: 4px 3px;
+  width: 6vw;
 }
 
 .list {
-    border: 2px solid #000;
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
+  border: 2px solid #000;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
 }
 
 .list :nth-child(odd) {
-    background-color: rgb(240, 236, 236);
+  background-color: rgb(240, 236, 236);
 }
 
 .list-item {
-padding-left: 1rem;
-font-size: 1.2rem;
-font-weight: 400;
+  padding-left: 1rem;
+  font-size: 1.2rem;
+  font-weight: 400;
 }
 
 .add-score {
-    width: 45vw;
-    display: flex;
-    flex-direction: column;
+  width: 45vw;
+  display: flex;
+  flex-direction: column;
 }
 
 .name {
-    width: 32%;
-    padding: 0.2rem;
-    border: 1px solid black;
-    margin-bottom: 1.2rem;
-    height: 1.4rem;
-
+  width: 32%;
+  padding: 0.2rem;
+  border: 1px solid black;
+  margin-bottom: 1.2rem;
+  height: 1.4rem;
 }
 
 .score {
-    width: 32%;
-    padding: 0.2rem;
-    border: 1px solid black;
-    margin-bottom: 1.2rem;
-    height: 1.4rem;
+  width: 32%;
+  padding: 0.2rem;
+  border: 1px solid black;
+  margin-bottom: 1.2rem;
+  height: 1.4rem;
 }
 
 #btn {
-    margin-left: 8rem;
+  margin-left: 8rem;
 }
